--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0053)file:///D:/autumn%202021/ENGG980/tut8/khoa/index.html -->
+<!-- saved from url=(0059)file:///D:/autumn%202021/ENGG980/tut8/khoa/index.html#about -->
 <html lang="en" class="fontawesome-i2svg-active fontawesome-i2svg-complete"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,15 +22,15 @@
                 <span class="d-block d-lg-none">Khoa Nguyen</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="./index_files/profile.jpg" alt=""></span>
             </a>
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="navbar-collapse collapse show" id="navbarSupportedContent" style="">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="file:///D:/autumn%202021/ENGG980/tut8/khoa/index.html#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="file:///D:/autumn%202021/ENGG980/tut8/khoa/index.html#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="file:///D:/autumn%202021/ENGG980/tut8/khoa/index.html#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="file:///D:/autumn%202021/ENGG980/tut8/khoa/index.html#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="file:///D:/autumn%202021/ENGG980/tut8/khoa/index.html#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="file:///D:/autumn%202021/ENGG980/tut8/khoa/index.html#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#awards">Awards</a></li>
                 </ul>
             </div>
         </nav>
