--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="navbar-collapse collapse show" id="navbarSupportedContent" style="">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/index.html#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://chris4451.github.io/ENGG980/#awards">Awards</a></li>
                 </ul>
             </div>
         </nav>
